tests/invalid/function/local_let_rec_where_syntax.facet
trait Show;

fn main() -> unrestricted isize {
  let rec f(x: unrestricted isize) -> unrestricted isize where T: Show {
    x
  } in (f 1)
}
